responsive gallery and text! header needs adjust

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
             <link rel="preconnect" href="https://fonts.gstatic.com"> 
             <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="fonts/simple-line-icons.min.css">
-            
             <link rel="stylesheet" href="css/footer.css">
             <link rel="stylesheet" href="css/custom.css">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
@@ -18,68 +17,70 @@
             <div class="bar"> </div>
             <header id="mainHeader" class="d-flex masthead" data-aos="zoom-out" data-aos-duration="1000" style="background: url(&quot;img/cover.png&quot;), #000000">
                 <div id="mainText" class="container my-auto text-center">
-                    <h1 class="text-center masthead-subheading mb-0" style="font-size: 8vw; color: #d8ff33;text-align: center;"><em style="text-transform: uppercase;">ISA BIRAMONTES</em></h2>
-                    <h3 class="text-center masthead-subheading mb-0" style="color: #d8ff33;text-align: center;"><strong><em>Developer, designer, artist.</em></strong><br></h3>
+                    <h1 class="text-center masthead-subheading mb-0" style="font-size: 6vw; color: #d8ff33;text-align: center;"><em style="text-transform: uppercase;">ISA BIRAMONTES</em></h2>
+                    <h3 class="text-center masthead-subheading mb-0" style="font-size: 3vw; color: #d8ff33;text-align: center;"><strong><em>Developer, designer, artist.</em></strong><br></h3>
                     <div class="overlay"></div>
                 </div>
             </header>
-            <div style="background: #000000; padding-top: 10%;">
-                <div class="container-fluid" style="padding-left: 5%; padding-right: 5%;">
-                    <div class="row">
-                        <div class="col-md-4 offset-lg-0" style="text-align: center; width: 25%;height: auto;">
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
-                                <div class="captions">Fabricademy </div>
-                                <!-- <?php echo "My first PHP script!";?> -->
-                                <!-- <div id="testDiv"> swag </div> -->
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 offset-lg-0" style="text-align: center; width: 25%;height: auto;">
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img style="height: auto;width: auto;padding-top: 10px;padding-bottom: 10px;" src="img/discovery-bg%20(1).jpg">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 offset-lg-0" style="text-align: center; width: 25%;height: auto;">
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                        </div>
+            <div style="background: #000000; padding-top: 5%; padding-right: 5%; padding-left: 5%;">
+                <div class="row"> 
+                    <div style="padding-right: 2%;" class="column">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mist.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                     </div>
-                </div>
+                    <div style="padding-right: 2%;" class="column">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                    </div> 
+                    <div style="padding-right: 2%;" class="column">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mist.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                    </div>
+                    <div style="padding-right: 2%;" class="column">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
+                    </div>
+                </div> 
             </div>
             <div class="footer"></div>
             <script src="js/jquery.min.js"></script>
