--- a/test.html
+++ b/test.html
@@ -9,17 +9,16 @@
             <link rel="preconnect" href="https://fonts.gstatic.com"> 
             <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="fonts/simple-line-icons.min.css">
-            
             <link rel="stylesheet" href="css/footer.css">
-            <link rel="stylesheet" href="css/test.css">
+            <link rel="stylesheet" href="css/custom.css">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
         </head>
         <body id="page-top">
             <div class="bar"> </div>
             <header id="mainHeader" class="d-flex masthead" data-aos="zoom-out" data-aos-duration="1000" style="background: url(&quot;img/cover.png&quot;), #000000">
                 <div id="mainText" class="container my-auto text-center">
-                    <h1 class="text-center masthead-subheading mb-0" style="font-size: 80px;color: #d8ff33;text-align: center;"><em style="text-transform: uppercase;">ISA BIRAMONTES</em></h2>
-                    <h3 class="text-center masthead-subheading mb-0" style="color: #d8ff33;text-align: center;"><strong><em>Developer, designer, artist.</em></strong><br></h3>
+                    <h1 class="text-center masthead-subheading mb-0" style="font-size: 6vw; color: #d8ff33;text-align: center;"><em style="text-transform: uppercase;">ISA BIRAMONTES</em></h2>
+                    <h3 class="text-center masthead-subheading mb-0" style="font-size: 3vw; color: #d8ff33;text-align: center;"><strong><em>Developer, designer, artist.</em></strong><br></h3>
                     <div class="overlay"></div>
                 </div>
             </header>
@@ -27,35 +26,59 @@
                 <div class="row"> 
                     <div style="padding-right: 2%;" class="column">
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mist.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                     </div>
                     <div style="padding-right: 2%;" class="column">
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                     </div> 
                     <div style="padding-right: 2%;" class="column">
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mist.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                     </div>
                     <div style="padding-right: 2%;" class="column">
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="width:100%">
+                        <div class="captions">Fabricademy </div>
                     </div>
                 </div> 
             </div>
