updating some contact form issues

--- a/about.html
+++ b/about.html
@@ -24,12 +24,12 @@
                                 <hr>
                                 <p style="padding-left: 15px;padding-right: 15px;">Isa's pronouns are they/them/she/hers.</p>
                                 <hr>
-                                <p style="padding-left: 15px;padding-right: 15px;">Isa is currently available and seeking work.</p>
+                                <p style="padding-left: 15px;padding-right: 15px;">Isa is currently seeking work and has immediate availability.</p>
                                 <hr>
                                 <div style="text-align:center"> </div>
                             </div>
                             <div class="col">
-                                <form method="post" action="send_mail.php">
+                                <form id="contact-form" method="post" action="index.php" role="form">
                                     <div class="row"> 
                                         <div class="col-md-12 col-lg-6">
                                             <p class="required" >Name</p>
