updated php for contact form

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                                     <p class="required">Email</p>
                                     <div class="form-group"><input class="form-control" type="email" name="email_address" required></div>
                                     <p class="required">Message</p>
-                                    <div class="form-group"><textarea class="form-control" type="text" name="message" rows="8"></textarea></div>
+                                    <div class="form-group"><textarea class="form-control" type="text" name="message" rows="8" required></textarea></div>
                                     <div class="form-group"><button type="submit"> Send </button></div>  
                                 </form>
                                 <p>This form is for PROFESSIONAL INQUIRIES ONLY </p>
