--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-            <title>Isa Biramontes</title>
+            <title>Ia Biramontes</title>
             <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
             <link rel="stylesheet" href="https://use.typekit.net/zlk3afr.css"> 
             <link rel="preconnect" href="https://fonts.gstatic.com"> 
