--- a/about.html
+++ b/about.html
@@ -29,10 +29,10 @@
                                 <div style="text-align:center"> </div>
                             </div>
                             <div class="col">
-                                <form id="contact-form" method="post" action="index.php" role="form">
+                                <form class="contact-form" action="index.php" method="post">
                                     <div class="row"> 
                                         <div class="col-md-12 col-lg-6">
-                                            <p class="required" >Name</p>
+                                            <p class="required">Name</p>
                                             <div class="form-group"><input class="form-control" type="text" name="first_name" placeholder="First" required></div>
                                         </div>
                                         <div class="col-md-12 col-lg-6"> 
@@ -48,7 +48,7 @@
                                     <div class="form-group"><input class="form-control" type="email" name="email_address" required></div>
                                     <p class="required">Message</p>
                                     <div class="form-group"><textarea class="form-control" type="text" name="message" rows="8" required></textarea></div>
-                                    <div class="form-group"><button type="submit"> Send </button></div>  
+                                    <div class="form-group"><button type="submit" name="submit"> Send </button></div>  
                                 </form>
                                 <p>This form is for PROFESSIONAL INQUIRIES ONLY </p>
                                 <p>For personal inquiries, contact me on social media. </p>
