--- a/navbar.html
+++ b/navbar.html
@@ -7,7 +7,7 @@
                     <li class="nav-item" style="color: #000000;"><a class="nav-link" href="developer.html" style="color: #d8ff33;">DEVELOPER</a></li>
                     <li class="nav-item" style="color: #000000;"><a class="nav-link" href="designer.html" style="color: #d8ff33;">DESIGNER</a></li>
                     <li class="nav-item" style="color: #000000;"><a class="nav-link" href="artist.html" style="color: #d8ff33;">ARTIST</a></li>
-                    <li class="nav-item" style="color: #000000;"><a class="nav-link" href="test.html" style="color: #d8ff33">ABOUT / CONTACT</a></li>
+                    <li class="nav-item" style="color: #000000;"><a class="nav-link" href="about.html" style="color: #d8ff33">ABOUT / CONTACT</a></li>
                 </ul>
             </div>
     </div>
