--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <link rel="stylesheet" href="css/custom.css">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
         </head>
-        <body id="page-top">
+        <body>
             <div class="bar"> </div>
             <header id="mainHeader" class="d-flex masthead" data-aos="zoom-out" data-aos-duration="1000" style="background: url(&quot;img/cover.png&quot;), #000000">
                 <div id="mainText" class="container my-auto text-center">
