--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-            <title>I Biramontes</title>
+            <title>Isa Biramontes</title>
             <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
             <link rel="stylesheet" href="https://use.typekit.net/zlk3afr.css"> 
             <link rel="preconnect" href="https://fonts.gstatic.com"> 
@@ -13,7 +13,7 @@
             <link rel="stylesheet" href="css/custom.css">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
         </head>
-        <body id="page-top">
+        <body>
             <div class="bar"> </div>
             <div style="background: #000000; padding-top: 7%;">
                 <section class="bg-black">
