--- a/developer.html
+++ b/developer.html
@@ -13,7 +13,7 @@
             <link rel="stylesheet" href="css/timeline.css">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
         </head>
-        <body id="page-top">
+        <body>
             <div class="bar"> </div>
             <div style="background: #000000; padding-top: 5%;">
                 <div class="container-fluid" style="padding-left: 5%; padding-right: 5%;">
