--- a/about.html
+++ b/about.html
@@ -42,8 +42,8 @@
                                     </div>
                                     <p class="required">Pronouns</p>
                                     <div class="form-group"><input class="form-control" type="text" name="pronouns" required></div>
-                                    <p>Subject</p>
-                                    <div class="form-group"><input class="form-control" type="text" name="subject"></div>
+                                    <p class="required">Subject</p>
+                                    <div class="form-group"><input class="form-control" type="text" name="subject" required></div>
                                     <p class="required">Email</p>
                                     <div class="form-group"><input class="form-control" type="email" name="email_address" required></div>
                                     <p class="required">Message</p>
