adjusted syntax in about html

--- a/about.html
+++ b/about.html
@@ -67,12 +67,12 @@
                 </section>
             </div>
             <div class="footer"></div>
-            <script src="/js/jquery.min.js"></script>
+            <script src="js/jquery.min.js"></script>
             <script src="bootstrap/js/bootstrap.min.js"></script>
-            <script src="/js/bs-init.js"></script>
+            <script src="js/bs-init.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-            <script src="/js/stylish-portfolio.js"></script>
-            <script src="/js/custom.js"></script>
+            <script src="js/stylish-portfolio.js"></script>
+            <script src="js/custom.js"></script>
         </body>
     </html>
