--- a/about.html
+++ b/about.html
@@ -20,16 +20,20 @@
                     <div class="container-fluid" data-aos="zoom-out" data-aos-duration="1000" style="padding-left: 5%; padding-right: 5%;">
                         <div class="row">
                             <div class="col-md-12 col-lg-6">
-                                <p style="padding-left: 15px;padding-right: 15px;">Isa Biramontes is an aspiring Wearable Technology Developer based in New York, NY. Currently attending Fabricademy in Montreal, they have a general background in fashion, textiles, coding, and interdisciplinary design.</p>
-                                <hr>
-                                <p style="padding-left: 15px;padding-right: 15px;">Isa's pronouns are they/them/she/hers.</p>
+                                <p style="padding-left: 15px;padding-right: 15px;">Isa Biramontes (they/she) is an aspiring Wearable Technology Developer based in New York, NY. Currently attending Fabricademy in Montreal, they have a general background in fashion, textiles, coding, and interdisciplinary design.</p>
                                 <hr>
                                 <p style="padding-left: 15px;padding-right: 15px;">Isa is currently seeking work and has immediate availability.</p>
                                 <hr>
+                                <div class="social" style="padding-left: 15px; height: 30px;border-style: none;">
+                                    <a href="https://github.com/IPbiramontes" style="padding-right: 3%; border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+                                    <a href="https://www.instagram.com/isa.s_wearables/" style="padding-right: 3%; border-style: none;color: rgb(255,255,255);font-size: 25px;"><i class="icon-social-instagram" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+                                    <a href="https://www.linkedin.com/in/isa-biramontes-they-she-891944149/" style=" border-style: none;color: rgb(255,255,255);font-size: 25px;"><i class="icon-social-linkedin"></i></a>
+                                </div>
                                 <div style="text-align:center"> </div>
                             </div>
                             <div class="col">
-                                <form class="contact-form" action="index.php" method="post">
+                                <!-- modify this form HTML and place wherever you want your form -->
+                                <form action="https://formspree.io/f/mvoveogg" method="POST">
                                     <div class="row"> 
                                         <div class="col-md-12 col-lg-6">
                                             <p class="required">Name</p>
@@ -41,20 +45,22 @@
                                         </div>
                                     </div>
                                     <p class="required">Pronouns</p>
-                                    <div class="form-group"><input class="form-control" type="text" name="pronouns" required></div>
-                                    <p class="required">Subject</p>
-                                    <div class="form-group"><input class="form-control" type="text" name="subject" required></div>
+                                    <div class="form-group"><input class="form-control" type="text" name="pronouns" placeholder="Ex: she/hers, they/them, ze/zir" required></div>
+                                    <input type="hidden" name="_subject" value="New inquiry"/>
                                     <p class="required">Email</p>
-                                    <div class="form-group"><input class="form-control" type="email" name="email_address" required></div>
+                                    <div class="form-group"><input class="form-control" type="email" name="_replyto"></div>
                                     <p class="required">Message</p>
-                                    <div class="form-group"><textarea class="form-control" type="text" name="message" rows="8" required></textarea></div>
-                                    <div class="form-group"><button type="submit" name="submit"> Send </button></div>  
+                                    <textarea class="form-control" name="message" rows="8"></textarea> 
+                                    <p style="padding-top: 5%;">This form is exclusively for professional inquiries. For personal inquiries, please contact her on social media. </p>
+                                    <div style="padding-top: 2%;" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" class="form-group"><button type="submit">Send</button></div>    
                                 </form>
-                                <p>This form is for PROFESSIONAL INQUIRIES ONLY </p>
-                                <p>For personal inquiries, contact me on social media. </p>
+                                
                                 <style>
                                     #hidden{
                                         color:black;
+                                    }
+                                    button{
+                                        font-weight:bold;
                                     }
                                     .required:after {
                                       content:" *";
