name changes, testing overlay

--- a/artist.html
+++ b/artist.html
@@ -19,11 +19,6 @@
                 <div class="container-fluid" style="padding-left: 5%; padding-right: 5%;">
                   <div class="panel panel-default">
                     <div class="panel-body">
-                        <div id="overlay" onclick="off()">
-                            <div class="overlay_content">
-                                <img class="timeline_magnify" style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
-                            </div>
-                        </div>
                       <ul class="timeline">
                         <li>
                           <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
@@ -33,7 +28,7 @@
                             <div class="timeline-body">
                                 <p>Jackie Isa</p>
                               <hr>
-                              <img class="timeline_magnify" style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
+                              <img class="timeline_magnify" style="height: auto; width: auto;" src="img/gears.jpg">
                             </div>
                           </div>
                         </li>
@@ -45,7 +40,7 @@
                             <div class="timeline-body">
                                 <p>Text</p>
                               <hr>
-                              <img class="timeline_magnify" style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
+                              <img class="timeline_magnify" style="height: auto; width: auto;" src="img/gears.jpg">
                             </div>
                           </div>
                         </li>
@@ -58,7 +53,7 @@
                             <div class="timeline-body">
                                 <p>text</p>
                               <hr>
-                              <img class="timeline_magnify" style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
+                              <img class="timeline_magnify" style="height: auto; width: auto;" src="img/gears.jpg">
                             </div>
                           </div>
                         </li>
@@ -76,4 +71,12 @@
             <script src="js/stylish-portfolio.js"></script>
             <script src="js/custom.js"></script>
         </body>
+         <!--
+     <div id="overlay" onclick="off()">
+                            <div class="overlay_content">
+                                <img class="timeline_magnify" style="height: auto; width: auto;" src="img/gears.jpg">
+                            </div>
+                        </div>
+    
+    -->
     </html>
