--- a/designer.html
+++ b/designer.html
@@ -45,7 +45,7 @@
 								<p >etc</p>
 								<p >Biodesign</p>
                               <hr>
-                              <img style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
+                              <img style="height: auto; width: auto;" src="img/gears.jpg">
                             </div>
                           </div>
                         </li>
@@ -70,7 +70,7 @@
 							  <p > HSFI</p>
 							  <p > Awarded</p>
                               <hr>
-                              <img style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
+                              <img style="height: auto; width: auto;" src="img/gears.jpg">
                             </div>
                           </div>
                         </li>
