--- a/developer.html
+++ b/developer.html
@@ -41,7 +41,7 @@
                             <div class="timeline-body">
                               <p>Former portfolio</p>
                               <hr>
-                              <img style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
+                              <img style="height: auto; width: auto;" src="img/gears.jpg">
                             </div>
                           </div>
                         </li>
@@ -66,7 +66,7 @@
                             <div class="timeline-body">
                               <p> CN @ Oscar Health</p>
                               <hr>
-                              <img style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
+                              <img style="height: auto; width: auto;" src="img/gears.jpg">
                             </div>
                           </div>
                         </li>
