--- a/index.html
+++ b/index.html
@@ -19,21 +19,20 @@
                 <div id="mainText" class="container my-auto text-center">
                     <h1 class="text-center masthead-subheading mb-0" style="font-size: 6vw; color: #d8ff33;text-align: center;"><em style="text-transform: uppercase;">ISA BIRAMONTES</em></h2>
                     <h3 class="text-center masthead-subheading mb-0" style="font-size: 3vw; color: #d8ff33;text-align: center;"><strong><em>Developer, designer, artist.</em></strong><br></h3>
-                    <div class="overlay"></div>
                 </div>
             </header>
             <div style="background: #000000; padding-top: 5%; padding-right: 5%; padding-left: 5%;">
                 <div class="row"> 
                     <div style="padding-right: 2%;" class="column">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/lights.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/lights.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mist.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
@@ -43,25 +42,25 @@
                         <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/lights.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
                     </div> 
                     <div style="padding-right: 2%;" class="column">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/lights.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/lights.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mist.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
@@ -71,11 +70,11 @@
                         <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/discovery-bg%20(1).jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width:100%">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/lights.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
