new image and thumbnail, gallery idea

--- a/artist.html
+++ b/artist.html
@@ -48,7 +48,7 @@
                         <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                           <div class="timeline-heading">
                             <h3>2019</h3>
-                            <p>Photoville</p>
+                            <p>Textile Design</p>
                           </div>
                           <div class="timeline-body"> <!-- Gallery img / Modal: Name here! -->
                             <hr>
