--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     <div style="padding-right: 2%;" class="column">
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/lights.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/artist_2019_4.png" style="width:100%">
+                        <div class="captions"> Textile Design  </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/lights.jpg" style="width:100%">
                         <div class="captions">Fabricademy </div>
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%">
