uplaoded & adjusting nav logo

--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-light navbar-expand-lg fixed-top navbar-custom" style="background: transparent;">
-    <div class="container">
-        <a class="navbar-brand" href="index.html" style="color: #d8ff33;">PORTFOLIO</a>
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <span><a id="toplogo" href="index.html"><img src="img/logo.png"/></a></span>
+        </div>
+    </div>
         <button class="navbar-toggler ml-auto custom-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"> <span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive" style="color:  #d8ff33;">
                 <ul class="nav navbar-nav ml-auto" style="color: #d8ff33;">
@@ -10,5 +13,4 @@
                     <li class="nav-item" style="color: #000000;"><a class="nav-link" href="about.html" style="color: #d8ff33">ABOUT / CONTACT</a></li>
                 </ul>
             </div>
-    </div>
 </nav>
