--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
             <title>Isa Biramontes</title>
+            <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
             <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
             <link rel="stylesheet" href="https://use.typekit.net/zlk3afr.css"> 
             <link rel="preconnect" href="https://fonts.gstatic.com"> 
