organizing & uploading photos

--- a/artist.html
+++ b/artist.html
@@ -27,7 +27,7 @@
                             <br>
                           </div>
                             <div class="timeline-body"> <!-- Gallery img / Modal: Name here! -->
-                              <a><img class="img-fluid z-depth-1" src="img/art/artist_2021_3tb.png" alt="video" data-toggle="modal" data-target="#modal1"></a>
+                              <a><img class="img-fluid z-depth-1" src="img/art/2021/artist_2021_3tb.png" alt="video" data-toggle="modal" data-target="#modal1"></a>
                           </div>
                         </div>
                       </li>
@@ -83,7 +83,7 @@
               <div class="modal-content">
                   <!--Body-->
                   <div class="modal-body mb-0 p-0">
-                      <img class="img-fluid z-depth-1" src="img/art/artist_2021_3.png">
+                      <img class="img-fluid z-depth-1" src="img/art/2021/artist_2021_3.png">
                   </div>
                   <!--Footer-->
                   <div class="modal-footer justify-content-center">
