missing semi colons

--- a/test.html
+++ b/test.html
@@ -321,8 +321,8 @@
 
 
     <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-        <h3 style="font-size: 3vw; color: #d8ff33; text-align: left">2021</h3>
-        <h3 style="font-size: 2vw; color: #d8ff33; text-align: left text-indent: 30%;">Temp</h3>
+        <h3 style="font-size: 3vw; color: #d8ff33; text-align: left;">2021</h3>
+        <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 30%;">Temp</h3>
     </div>
     <div class="row">
         <div style="padding-right: 2%;" class="column">
@@ -353,9 +353,9 @@
 
 
     <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-        <h3 style="font-size: 3vw; color: #d8ff33; text-align: left">2020</h3>
-        <h3 style="font-size: 2vw; color: #d8ff33; text-align: left text-indent: 30%;">Wearable Art</h3>
-        <p class="tab" style="font-size: 2vw; color: #d8ff33; text-align: left text-indent: 60%;">In collaboration with artist <a href="https://www.instagram.com/jacks.artfarts/"> Jackie Alexis</a></p>
+        <h3 style="font-size: 3vw; color: #d8ff33; text-align: left;">2020</h3>
+        <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 30%;">Wearable Art</h3>
+        <p class="tab" style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 60%;">In collaboration with artist <a href="https://www.instagram.com/jacks.artfarts/"> Jackie Alexis</a></p>
     </div>
     <div class="row">
         <div style="padding-right: 2%;" class="column">
@@ -386,8 +386,8 @@
 
 
     <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-        <h3 style="font-size: 3vw; color: #d8ff33; text-align: left">2019</h3>
-        <h3 style="font-size: 2vw; color: #d8ff33; text-align: left text-indent: 30%;">Textile Design</h3>
+        <h3 style="font-size: 3vw; color: #d8ff33; text-align: left;">2019</h3>
+        <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 30%;">Textile Design</h3>
     </div>
     <div class="row">
         <div style="padding-right: 2%;" class="column">
